--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Meta tag Google Site Verification -->
+  <meta name="google-site-verification" content="8D3hkEvwhfxtZmuKlVcDeqqwD9dwHvVtEPC5_DpRgPs" />
+
   <title>Pogung PathFinder</title>
   <style>
     :root {
@@ -151,9 +155,9 @@
 
   <div class="container">
     <div class="alert alert-warning">
-      <span class="alert-icon">⚠️</span>
+      <span class="alert-icon">⚠</span>
       <div>
-        <strong style="display: block; margin-bottom: 0.5rem;">Update Terakhir: 21 Mei 2025</strong>
+        <strong style="display: block; margin-bottom: 0.5rem;">Update Terakhir: 25 Mei 2025</strong>
         <p style="margin: 0;">Status portal dapat berubah sewaktu-waktu. Silakan laporkan perubahan melalui kontak kami.</p>
       </div>
     </div>
